--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=0, initial-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-	</head>
+		<meta name="description" content="todo" />
+</head>
 
 	<body class="@ViewBag.Template">
 		<a class="sr-only">Skip navigation</a>
