--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 		@Styles.Render("~/bundles/bootstrap-custom")
 		@Styles.Render("~/bundles/branch-specific")
 		@Scripts.Render("~/bundles/modernizr")
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=0, initial-scale=1.0">
@@ -134,6 +135,20 @@
 			</script>
 
 			@RenderSection("scripts", false)
+			
+			<!-- Social Media Button Scripts -->
+			<div id="fb-root"></div>
+			<script>
+				(function (d, s, id) {
+					var js, fjs = d.getElementsByTagName(s)[0];
+					if (d.getElementById(id)) return;
+					js = d.createElement(s); js.id = id;
+					js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=189234734457151";
+					fjs.parentNode.insertBefore(js, fjs);
+				}(document, 'script', 'facebook-jssdk')
+				);
+			</script>
+			<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
 		</div>
 	</body>
 </html>
