--- a/Branch.App/Content/Styles/application.scss
+++ b/Branch.App/Content/Styles/application.scss
@@ -64,3 +64,5 @@ footer > .container > .row > .col-md-2 > .made-in {
 }
 
 @import "Home/index";
+@import "Halo4/home";
+@import "Halo4/service_record";
