--- a/Branch.App/Views/Home/Index.cshtml
+++ b/Branch.App/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
 							Halo 4 Stats
 						</h1>
 						<p>
-							Service Records, to Game Histories, to Commendation progress, to in-depth game details - B.net 2.0
+							Service Records, to Game Histories, to Commendation Progress, to In-Depth Game Details.
 						</p>
 					</a>
 				</div>
