--- a/Branch.App/Areas/Halo4/Views/Shared/HeaderServiceRecord.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/HeaderServiceRecord.cshtml
@@ -72,6 +72,6 @@
 		</div>
 
 		<div class="spartan-insignia hidden-sm hidden-xs" style="background-image: url(@GeneralHelpers.GetRawAssetUrl(@serviceRecord.EmblemImageUrl, 100));"></div>
-		<div class="spartan-image hidden-sm hidden-xs" style="background-image: url(@GeneralHelpers.GetPlayerModelUrl(@serviceRecord.Gamertag));"></div>
+		<div class="spartan-image hidden-sm hidden-xs" style="background-image: url('@GeneralHelpers.GetPlayerModelUrl(@serviceRecord.Gamertag)');"></div>
 	</div>
 </div>
