--- a/Branch.App/Content/Styles/Halo4/_home.scss
+++ b/Branch.App/Content/Styles/Halo4/_home.scss
@@ -123,3 +123,7 @@ body.halo4_home {
 		background-position: left center;
 	}
 }
+
+@import "service_record";
+@import "specializations";
+@import "commendations";
