fuck, and this fix.

--- a/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
@@ -5,7 +5,7 @@
 @{
 	var serviceRecord = @Model.ServiceRecord;
 	Enums.Pages currentPage = ViewBag.CurrentH4Page;
-	_343Enums.CommendationCategory currentCommendationCategory = ViewBag.CurrentCommendationCategory;
+	_343Enums.CommendationCategory? currentCommendationCategory = ViewBag.CurrentCommendationCategory;
 }
 <div class="bs-sidebar" data-spy="affix" data-offset-top="302">
 	<ul class="nav bs-sidenav">
