--- a/Branch.App/Areas/Halo4/Views/Csr/Details.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Csr/Details.cshtml
@@ -98,8 +98,8 @@
 						<thead>
 							<tr>
 								<th>*</th>
-								<th>Game Variant Name</th>
-								<th>Game Variant Description</th>
+								<th style="width: 150px;">Map Variant Name</th>
+								<th>Map Variant Description</th>
 							</tr>
 						</thead>
 						<tbody>
